// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link works with just a to 1`] = `
<a
  href="/somePath"
  to="/somePath"
>
  Some Path
</a>
`;

exports[`Router passes location to children 1`] = `
<div>
  <div
    location="http://localhost/somePath"
  />
</div>
`;

exports[`Router updates location on window events 1`] = `
<div>
  <div
    location="[object Object]"
  />
</div>
`;
